Fixes formatting issues with accomodations list.

--- a/waypoint-overview/lodging-overview.tex
+++ b/waypoint-overview/lodging-overview.tex
@@ -58,7 +58,7 @@
 59&Il Picchio Verde&Loc. Torre Salese 15/16&Altopascio&+39 3357663272&&https://www.viefrancigene.org/en/resource/accomodation/vf28-90-altopascio-colonica-il-picchio-verde/\\\hline
 61&Casetta Del Pellegrino&Via Della Chiesa 20&Galleno&+39 0571299931, +39 3669997072&open all year&https://www.viefrancigene.org/en/resource/accomodation/vf29-30-galleno-casetta-del-pellegrino/\\\hline
 62&Casa Baldi Via Francigena&Via Don Minzoni 7&Gambassi Terme&+39 3703169774&price: 15/20 per night&https://www.viefrancigene.org/en/resource/accomodation/vf29-90-gambassi-terme-casa-baldi-francigena/\\\hline
-63&Ostello Il Ponte Dei Medici&Via Colombo 308/310&Fucecchio&+39 0571297831&2.4 rating on GMaps, unclear whether accept pilgrim pass&https://www.google.com/maps/place/Ostello+Ponte+de%E2%80%99+Medici/@43.7442818,10.7701406,19.81z/data=!4m10!3m9!1s0x132a7be2369163f1:0xe88329a797bb8173!5m3!1s2025-03-09!4m1!1i2!8m2!3d43.7442054!4d10.7703123!16s%2Fg%2F11ny030tm0!5m1!1e2?entry=ttu\\\hline
+63&Ostello Il Ponte Dei Medici&Via Colombo 308/310&Fucecchio&+39 0571297831&2.4 rating on GMaps, unclear whether accept pilgrim pass&https://maps.app.goo.gl/g2JtSyyHBn2ykb736\\\hline
 64&L'Hospitale Del Pellegrino&Via Gargozzi 34&San Miniato&+39 3934995126&&nan\\\hline
 65&Ostello Di San Miniato&Via Vittime Del Duomo 4&San Miniato&+39 3387997004&price: 19, checkin from 16 to 18&https://www.viefrancigene.org/en/resource/accomodation/vf28-90-san-miniato-ostello-san-miniato/, https://www.ostellosanminiato.com/tariffa-e-servizi/\\\hline
 66&Affittacamere San Miniato&Via Giosuè Carducci 2&San Miniato&+39 3533890839&&https://www.viefrancigene.org/en/resource/accomodation/vf29-90-san-miniato-affittacamere-san-miniato/\\\hline
@@ -84,7 +84,7 @@
 87&Foresteria San Clemente Ai Servi&Piazza Manzoni 5&Siena&+39 0577222633&&https://www.viefrancigene.org/en/resource/accomodation/vf33-90-siena-foresteria-san-clemente-ai-servi/\\\hline
 88&Camera Sabrina Erdas&Viale Mazzini 36&Siena&+39 3406047608&&https://www.viefrancigene.org/en/resource/accomodation/vf33-90-siena-casa-sabrina-erdas/\\\hline
 89&Parrocchia San Martino&Via di San Girolamo 8&Siena&+39 0577 21271, +39 338 604 8009&open all year, open 6-22:30&https://www.viefrancigene.org/en/resource/accomodation/vf33-90-siena-parrocchia-san-martino/\\\hline
-90&Siena Hostel&Via Fiorentina 89&Siena&+39 05771698177&&https://www.google.com/maps/place/Siena+Hostel+Guidoriccio/@43.3406807,11.3054705,19.75z/data=!4m16!1m5!3m4!2zNDPCsDIwJzI1LjgiTiAxMcKwMTgnMjAuOSJF!8m2!3d43.3405024!4d11.3058074!3m9!1s0x132a2cfc7b982003:0x8bc1e84c1b69e776!5m3!1s2025-03-09!4m1!1i1!8m2!3d43.3404551!4d11.3055555!16s%2Fg%2F12hlzsr1c!5m1!1e2?entry=ttu\\\hline
+90&Siena Hostel&Via Fiorentina 89&Siena&+39 05771698177&&https://maps.app.goo.gl/KspZfMq1SoVTw7ue7\\\hline
 91&Casa Privata Letizia Lusini&Piazza Gramsci 7&Monteroni D’Arbia&+39 3382172483&&https://www.viefrancigene.org/en/resource/accomodation/casa-privata-letizia-lusini/\\\hline
 92&Centro Cresti&S.S. Cassia&Ponte D’Arbia&+39 3277197439&price: donation&https://www.viefrancigene.org/en/resource/accomodation/vf32-50-monteroni-darbia-centro-cresti/, https://centrocresti.it/en/guidelines-2/\\\hline
 93&Abbazia Di Sant’Antimo&Località S. Antimo 222, 53024&Castelnuovo Dell’Abate&+39 0577286300&&https://www.viefrancigene.org/en/resource/accomodation/vf35-60-torrenieri-abbazia-di-santantimo/\\\hline
@@ -104,7 +104,7 @@
 108&La Casa Del Pellegrino&Via Roma 51&Acquapendente&+39 3471662919&&nan\\\hline
 109&La Casa Di Teo&Via S. Allende 7&Acquapendente&+39 3279281046&&nan\\\hline
 110&Aquesia House&Via Santa Maria Maddalena 19&Acquapendente&+39 3458519718&&https://www.viefrancigene.org/en/resource/accomodation/vf37-90-acquapendente-aquesia-house/\\\hline
-111&Il Papiro&Via Papiro 39&Acquapendente&+39 3393324227&&https://www.google.com/maps/place/Alloggio+turistico+Il+Papiro/@42.742878,11.863892,19.93z/data=!4m12!1m5!3m4!2zNDLCsDQ0JzM0LjYiTiAxMcKwNTEnNTEuNyJF!8m2!3d42.7429392!4d11.8643505!3m5!1s0x13293b8e39b581dd:0x808b76abe43b6ae5!8m2!3d42.742892!4d11.8638999!16s%2Fg%2F11vf389myw!5m1!1e2?entry=ttu\\\hline
+111&Il Papiro&Via Papiro 39&Acquapendente&+39 3393324227&&https://maps.app.goo.gl/Wgr9YQz6PEVVt1Pv5\\\hline
 112&Piccola Perla&Vicolo Morelli 5&Acquapendente&+39 3398105959&&https://www.viefrancigene.org/en/resource/accomodation/vf37-90-acquapendente-piccola-perla/\\\hline
 113&Agriturismo Murera&Predio S. Anna 151&Acquapendente&+39 3336144823, +39 329741836&price: 15-20&https://www.viefrancigene.org/en/resource/accomodation/vf37-90-acquapendente-agriturismo-murera/\\\hline
 114&Suore Del Ss Sacramento&Piazza Santa Cristina 14&Bolsena&+39 0761586210&type: convents and parishes&https://www.viefrancigene.org/en/resource/accomodation/vf37-10-bolsena-istituto-suore-ss-sacramento/\\\hline
