--- a/waypoint-overview/res/sty/document.sty
+++ b/waypoint-overview/res/sty/document.sty
@@ -4,7 +4,7 @@
 \usepackage{csquotes} % Typesets quotes
 
 % --- Page Dimensions ---
-\usepackage[a4paper, landscape, top=0, bottom=-2em, left=1em, right=1em, includeheadfoot]{geometry} % Page dimensions including support for icons in header.
+\usepackage[a4paper, top=0, bottom=-2em, left=1em, right=1em, includeheadfoot]{geometry} % Page dimensions including support for icons in header.
 \geometry{a4paper}
 \setlength{\headheight}{20pt} % Enlarges head height for icons
 \setlength{\headsep}{5pt}
@@ -79,6 +79,6 @@
 \lhead{}
 \chead{\raisebox{\height}{\small \mytitle\ \documenttype}}
 \rhead{\includegraphics[height=0.7\headheight]{res/img/laniw_logo-tight}}
-\lfoot{\small v0.0.\theversionNumber\ \textcolor{gray}{\date}}
+\lfoot{\small v1.0.\theversionNumber\ \textcolor{gray}{\date}}
 \cfoot{\small \shortauthor}
 \rfoot{\small \thepage\ / {\hypersetup{hidelinks}\pageref{LastPage}}}
