Updates lodings PDF for correct format.

--- a/waypoint-overview/lodging-overview.tex
+++ b/waypoint-overview/lodging-overview.tex
@@ -4,7 +4,7 @@
 3&Jetset BB&Via Leonardi, 1&Quinzano San Pietro&+393356206248&&https://maps.app.goo.gl/rbLt9c94mbuVM8H3A\\\hline
 4&SleepnFly Villa Luisa&Via Leonardo da Vinci, 2&Case Nuove&+393515630791&price: 105 for three, includes breakfast&https://www.booking.com/hotel/it/sleep-amp-fly-villa-luisa.en-gb.html\\\hline
 5&C'era una Volta&Via Bellaria, 39&Case Nuove&+393473514715&&https://maps.app.goo.gl/CpGj6zfW7xkNmwZH7\\\hline
-6&Ristorante Pizzeria Mambly Bed & Breakfast Fiume Ticino&SP4/III, 341&Galliate&+393313199604&price: 76 (Google)&https://maps.app.goo.gl/BDqJAxckJJmZWzAWA\\\hline
+6&Ristorante Pizzeria Mambly Bed n Breakfast Fiume Ticino&SP4/III, 341&Galliate&+393313199604&price: 76 (Google)&https://maps.app.goo.gl/BDqJAxckJJmZWzAWA\\\hline
 7&Campeggio Playa di Valverde&Via del Mezzanino&Galliate&+39 338 5061908&type: camping, reservations through WhatsApp&https://www.playadivalverde.com/, https://www.camping.info/en/campsite/campeggio-playa-di-valverde\\\hline
 8&La Corta Sul Naviglio&Via Calderari, 4&Boffalora Sopra Ticino&+39029755596&price: starting at 60&https://maps.app.goo.gl/17JqE2zSfbPmuGbU9\\\hline
 9&Cascina Salazzara&Str. Valle, 9&Ponte Vecchio&+39029790934&&https://maps.app.goo.gl/8AZ9A5rpHNSAPzMP6\\\hline
